[tool.poetry]
name = "forwarder"
version = "0.1.0"
description = ""
authors = ["MrMissx <mr.missx@example.com>"]
packages = [{include = "forwarder"}]

[tool.poetry.dependencies]
python = "^3.9"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
